ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: bootcamp
  annotations:
    cert-manager.io/cluster-issuer: "bootcamp-issuer"
spec:
  tls:
    - hosts:
        - nefua.com.ng
      secretName: bootcamp-tls
  ingressClassName: nginx
  rules:
  -  host: nefua.com.ng
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
